@startuml
left to right direction
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam shadowing false
hide empty members

title DiGr - Class diagram AST-парсера

package "document_ast.api" {
  class ActorAstParser {
    +from_config_dir(config_dir)
    +parse(path, format_name)
  }
}

package "document_ast.config" {
  class ConfigLoader {
    +load(path, expected_format_name)
  }

  class ParserConfig {
    +format_name
    +format_config
    +entities
    +get_entity(entity_name)
  }

  class FormatConfig {
    +name
    +reader
    +root_entity
  }

  class EntityConfig {
    +name
    +contains
    +segmenter
  }

  ConfigLoader --> ParserConfig : создаёт
  ParserConfig *-- FormatConfig
  ParserConfig *-- "1..*" EntityConfig
}

package "document_ast.model" {
  class SourceDocument {
    +path
    +format_name
    +text
  }

  class AstNode {
    +entity
    +text
    +start
    +end
    +children
    +metadata
  }

  class AstDocument {
    +source_path
    +format_name
    +root_entity
    +root
    +to_dict()
  }

  AstDocument *-- "1" AstNode : root
  AstNode *-- "0..*" AstNode : children
}

package "document_ast.source" {
  abstract class SourceReader {
    +read(path, format_name, reader_config)
  }

  class PlainTextReader {
    +read(path, format_name, reader_config)
  }

  class SourceReaderRegistry {
    +read(path, format_name, reader_config)
  }

  SourceReader <|-- PlainTextReader
  SourceReaderRegistry o-- "1..*" SourceReader
  SourceReader --> SourceDocument : создаёт
}

package "document_ast.segmentation" {
  class TextSegment {
    +text
    +start
    +end
  }

  class TextSegmenter {
    +segment(text, base_start, config)
  }

  TextSegmenter --> "0..*" TextSegment : создаёт
}

package "document_ast.runtime" {
  class AstBuilder {
    +build_entity_node(entity_name, segment)
  }

  class ParserRuntime {
    +driver
    +coordinator
    +collector
  }

  class ParserRuntimeFactory {
    +create(config)
  }

  class ParseCoordinatorActor
  class SourceReaderActor {
    +set_reply_to(handle)
  }

  class SubtreeBuilderWorkerActor {
    +set_reply_to(handle)
  }

  class ParseResultCollectorActor {
    +result
  }

  ParserRuntimeFactory --> ParserRuntime : создаёт
  ParserRuntimeFactory --> ParseCoordinatorActor : создаёт
  ParserRuntimeFactory --> SourceReaderActor : создаёт
  ParserRuntimeFactory --> SubtreeBuilderWorkerActor : создаёт xN
  ParserRuntimeFactory --> ParseResultCollectorActor : создаёт

  ParserRuntime *-- ParseCoordinatorActor : coordinator
  ParserRuntime *-- ParseResultCollectorActor : collector

  AstBuilder --> ParserConfig
  AstBuilder --> TextSegmenter
  AstBuilder --> TextSegment
  AstBuilder --> AstNode : создаёт

  ParseCoordinatorActor --> ParserConfig
  ParseCoordinatorActor --> TextSegmenter
  ParseCoordinatorActor --> SourceDocument
  ParseCoordinatorActor --> AstDocument

  SourceReaderActor --> ParserConfig
  SourceReaderActor --> SourceReaderRegistry
  SourceReaderActor --> SourceDocument

  SubtreeBuilderWorkerActor --> AstBuilder
  SubtreeBuilderWorkerActor --> AstNode

  ParseResultCollectorActor --> AstDocument
}

ActorAstParser --> ConfigLoader
ActorAstParser --> ParserRuntimeFactory
ActorAstParser --> ParserConfig
ActorAstParser --> AstDocument

@enduml
